--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://raccooncoon.github.io/edu101/",
-  "name": "my-app",
+  "name": "edu101",
   "private": true,
   "version": "0.0.0",
   "type": "module",
